# CodexTray

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/resources/: codextray-hook.ps1
src-tauri/src/: cli.rs  dashboard.rs  hook_stats.rs  lib.rs  main.rs  models.rs  settings.rs  startup_diagnostics.rs  token_usage.rs  tray_status.rs
src/components/: TrayPanel.vue
src/styles/: base.css  tokens.css
src/types/: dashboard.ts
