[package]
name = "codextray"
version = "1.3.4"
description = "CodexTray desktop tray panel"
authors = ["CodexTray contributors"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "codextray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["io-util", "process", "time"] }
url = "2"
rfd = { version = "0.15", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
